tests/snapshots/shim_snapshot_exhaustive__openai__openai_chat_completion_request_minimal.snap
---
source: tests/shim_snapshot_exhaustive.rs
expression: req
---
{
  "model": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": "Hello"
    }
  ]
}
