tests/snapshots/shim_snapshot_exhaustive__openai__openai_embedding_request.snap
---
source: tests/shim_snapshot_exhaustive.rs
expression: req
---
{
  "model": "text-embedding-3-small",
  "input": [
    "Hello world",
    "Rust programming"
  ],
  "encoding_format": "float",
  "dimensions": 1536
}
