tests/snapshots/shim_snapshot_exhaustive__openai__openai_embedding_response.snap
---
source: tests/shim_snapshot_exhaustive.rs
expression: resp
---
{
  "object": "list",
  "data": [
    {
      "object": "embedding",
      "index": 0,
      "embedding": [
        0.1,
        0.2,
        0.3
      ]
    },
    {
      "object": "embedding",
      "index": 1,
      "embedding": [
        0.4,
        0.5,
        0.6
      ]
    }
  ],
  "model": "text-embedding-3-small",
  "usage": {
    "prompt_tokens": 8,
    "total_tokens": 8
  }
}
