tests/snapshots/shim_snapshot_exhaustive__openai__openai_error_response.snap
---
source: tests/shim_snapshot_exhaustive.rs
expression: err
---
{
  "error": {
    "message": "Rate limit exceeded",
    "type": "rate_limit_error",
    "code": "rate_limit"
  }
}
