tests/snapshots/shim_snapshot_exhaustive__openai__openai_response_with_tool_calls.snap
---
source: tests/shim_snapshot_exhaustive.rs
expression: resp
---
{
  "id": "chatcmpl-snap002",
  "object": "chat.completion",
  "created": 1700000100,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "tool_calls": [
          {
            "id": "call_abc",
            "type": "function",
            "function": {
              "name": "search_docs",
              "arguments": "{\"query\":\"rust async\"}"
            }
          }
        ]
      },
      "finish_reason": "tool_calls"
    }
  ],
  "usage": {
    "prompt_tokens": 50,
    "completion_tokens": 25,
    "total_tokens": 75
  }
}
