tests/snapshots/shim_snapshot_exhaustive__openai__openai_stream_chunk_finish.snap
---
source: tests/shim_snapshot_exhaustive.rs
expression: chunk
---
{
  "id": "chatcmpl-snap005",
  "object": "chat.completion.chunk",
  "created": 1700000400,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "delta": {},
      "finish_reason": "stop"
    }
  ]
}
