tests/snapshots/shim_snapshot_exhaustive__openai__openai_stream_chunk_text.snap
---
source: tests/shim_snapshot_exhaustive.rs
expression: chunk
---
{
  "id": "chatcmpl-snap003",
  "object": "chat.completion.chunk",
  "created": 1700000200,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "delta": {
        "role": "assistant",
        "content": "Hello"
      }
    }
  ]
}
