tests/snapshots/shim_snapshot_exhaustive__openai__openai_stream_chunk_tool_call.snap
---
source: tests/shim_snapshot_exhaustive.rs
expression: chunk
---
{
  "id": "chatcmpl-snap004",
  "object": "chat.completion.chunk",
  "created": 1700000300,
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "delta": {
        "tool_calls": [
          {
            "index": 0,
            "id": "call_xyz",
            "type": "function",
            "function": {
              "name": "read_file",
              "arguments": "{\"path\":\"src/main.rs\"}"
            }
          }
        ]
      }
    }
  ]
}
